--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,65 +1,89 @@
 <footer class="footer">
   <div class="wrapper">
-    <div class="footer__items">
-      <h3 class="footer__title">Tienda</h3>
+    <div class="footer_items">
+      <h3 class="footer_items-title">Tienda</h3>
       <nav>
         <ul class="footer__menu">
           <li>
-            <a class="footer__text" href="https://adalab.es" target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es"
+              target="_blank"
               >Productos</a
             >
           </li>
           <li>
-            <a class="footer__text" href="https://adalab.es" target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es"
+              target="_blank"
               >Cajoneras</a
             >
           </li>
           <li>
-            <a class="footer__text" href="https://adalab.es" target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es"
+              target="_blank"
               >Para toda la casa</a
             >
           </li>
           <li>
-            <a class="footer__text" href="https://adalab.es" target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es"
+              target="_blank"
               >Habitaciones</a
             >
           </li>
         </ul>
       </nav>
     </div>
-    <div class="footer__items">
-      <h3 class="footer__title">Nosotros</h3>
+    <div class="footer_items">
+      <h3 class="footer_items-title">Nosotros</h3>
       <nav>
         <ul class="footer__menu">
           <li>
-            <a class="footer__text" href="https://adalab.es" target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es"
+              target="_blank"
               >Nuestra Guía</a
             >
           </li>
           <li>
-            <a class="footer__text" href="https://adalab.es " target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es "
+              target="_blank"
               >Nuestro diseño</a
             >
           </li>
           <li>
-            <a class="footer__text" href="https://adalab.es" target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es"
+              target="_blank"
               >Nuestra historia</a
             >
           </li>
           <li>
-            <a class="footer__text" href="https://adalab.es" target="_blank"
+            <a
+              class="footer_items-text"
+              href="https://adalab.es"
+              target="_blank"
               >Ayuda</a
             >
           </li>
         </ul>
       </nav>
     </div>
-    <div class="footer__items">
-      <h3 class="footer__title">Contacto</h3>
-      <a class="footer__text" href="mailto:ayuda@openspaces.com"
+    <div class="footer_items">
+      <h3 class="footer_items-title">Contacto</h3>
+      <a class="footer_items-text" href="mailto:ayuda@openspaces.com"
         >ayuda@openspaces.com</a
       >
-      <a class="footer__text" href="https://adalab.es" target="_blank"
+      <a class="footer_items-text" href="https://adalab.es" target="_blank"
         >Socios</a
       >
       <div class="footer_social">
@@ -74,10 +98,11 @@
         ></a>
       </div>
     </div>
-    <div class="arrow">
-      <a href="#top-page" title="Ir arriba">
-        <i class="fa-solid fa-arrow-up icons arrow-jump"></i
-      ></a>
-    </div>
+  </div>
+
+  <div class="arrow">
+    <a href="#top-page" title="Ir arriba">
+      <i class="fa-solid fa-arrow-up icons arrow-jump"></i
+    ></a>
   </div>
 </footer>
