--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,56 +1,44 @@
 <header>
   <a name="top-page"></a>
   <div class="container_header">
-    <div class="header__menu">
-      <a class="menu-h" href="https://adalab.es">
-        <i class="fa-solid fa-bars menu"></i>
+    <div class="header_menu">
+      <a class="header_menu-b" href="https://adalab.es">
+        <i class="fa-solid fa-bars icon-b"></i>
       </a>
-      <nav class="header__nav">
-        <ul class="header__nav--menu">
+      <nav class="header_nav">
+        <ul class="header_nav-menu">
           <li>
-            <a
-              class="header__nav--text"
-              href="https://adalab.es"
-              target="_blank"
+            <a class="header_nav-text" href="https://adalab.es" target="_blank"
               >productos</a
             >
           </li>
           <li>
-            <a
-              class="header__nav--text"
-              href="https://adalab.es"
-              target="_blank"
+            <a class="header_nav-text" href="https://adalab.es" target="_blank"
               >colecciones</a
             >
           </li>
           <li>
-            <a
-              class="header__nav--text"
-              href="https://adalab.es"
-              target="_blank"
+            <a class="header_nav-text" href="https://adalab.es" target="_blank"
               >tienda</a
             >
           </li>
           <li>
-            <a
-              class="header__nav--text"
-              href="https://adalab.es"
-              target="_blank"
+            <a class="header_nav-text" href="https://adalab.es" target="_blank"
               >inicio</a
             >
           </li>
         </ul>
       </nav>
     </div>
-    <div class="header__logo">
+    <div class="header_logo">
       <img class="logo" src="./assets/images/logo.png" alt="Logo Open Space" />
     </div>
   </div>
 
-  <div class="hero__content">
+  <div class="container_hero">
     <div class="hero-text">
-      <hi class="hero__title">Disfruta creando espacios</hi>
-      <a class="hero__btn" href="https://adalab.es"> comprar ahora</a>
+      <h1 class="hero-title">Disfruta creando espacios</h1>
+      <a class="btn-1" href="https://adalab.es"> comprar ahora</a>
     </div>
   </div>
 </header>
