--- a/src/html/partials/main-s2-send.html
+++ b/src/html/partials/main-s2-send.html
@@ -1,14 +1,12 @@
 <section class="section2">
   <div class="send">
     <img
-      class="send__icon"
+      class="send_icon"
       src="./assets/images/icon_4.png"
       alt="Icono Envío gratis garantizado"
     />
-    <h3 class="send__title">Envío gratis garantizado</h3>
-    <p class="send__text">Envío gratis en compras desde 100</p>
-    <a class="send__btn" href="https://adalab.es" target="_blank">
-      Comprar ahora</a
-    >
+    <h3 class="send_title">Envío gratis garantizado</h3>
+    <p class="send_text">Envío gratis en compras desde 100</p>
+    <a class="btn-2" href="https://adalab.es" target="_blank"> Comprar ahora</a>
   </div>
 </section>
