--- a/src/html/partials/main-s3-shop.html
+++ b/src/html/partials/main-s3-shop.html
@@ -1,12 +1,10 @@
 <section class="section3">
   <div class="shop">
-    <h3 class="shop__title">Disfruta creando espacios</h3>
-    <p class="shop__text">
+    <h3 class="shop_title">Disfruta creando espacios</h3>
+    <p class="shop_text">
       Una línea de productos diseñados para todos tus espacios
     </p>
-    <a class="hero__btn" href="https://adalab.es" target="_blank">
-      Comprar ahora</a
-    >
+    <a class="btn-1" href="https://adalab.es" target="_blank"> Comprar ahora</a>
   </div>
-  <div class="shop__img"></div>
+  <div class="shop_img"></div>
 </section>
