--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,6 +1,6 @@
 <main class="main">
-  <section class="s1-benefits">
-    <h2 class="benefits__title">
+  <section class="container_benefits">
+    <h2 class="benefits_title">
       Volverse organizado se siente mejor con
       <span class="capital">open spaces</span>
     </h2>
