--- a/src/html/partials/main-s1-benefits.html
+++ b/src/html/partials/main-s1-benefits.html
@@ -1,12 +1,12 @@
-<article class="container__benefit">
+<article class="container_benefit">
   <img
-    class="benefit__icon"
+    class="benefit_icon"
     src="@@benefit_icon"
     alt="Icono de @@benefit_name"
   />
 
   <div>
-    <h3 class="container__benefit--name">@@benefit_name</h3>
-    <p class="container__benefit--descripcion">@@benefit_description</p>
+    <h3 class="benefit_name">@@benefit_name</h3>
+    <p class="benefit_description">@@benefit_description</p>
   </div>
 </article>
