--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,10 +1,7 @@
 @import "core/variables";
 @import "core/mixins";
 @import "core/reset";
-
-// @import 'components/code';
-// @import 'components/links';
-
+@import "components/button";
 @import "layout/header";
 @import "layout/main";
 @import "layout/main-s1-benefits.scss";
