--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -78,8 +78,8 @@
         </ul>
       </nav>
     </div>
-    <div class="footer_items">
-      <h3 class="footer_items-title">Contacto</h3>
+    <div class="footer_items order">
+      <h3 class="footer_items-title contact">Contacto</h3>
       <a class="footer_items-text" href="mailto:ayuda@openspaces.com"
         >ayuda@openspaces.com</a
       >
