--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -7,9 +7,11 @@ $c-bg-l: #f0ebe5;
 $c-bg-m: #ff975a;
 $c-bg-d: #0c474b;
 
+
 $c-text-l: #ffffff;
 $c-text-m: #b6c8c9;
 $c-text-d: #0c474b;
+$c-text-dd: black;
 
 $f-text: "Poppins", sans-serif;
 
