--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-color: $c-bg-d;
+  background-color: $c-bg-m;
   height: 100%;
   padding: 56px 28px 16px 100px;
   position: relative;
@@ -28,27 +28,38 @@
 .footer_items {
   width: 208px;
   height: 100%;
-  padding-bottom: 10px;
+  padding-bottom: 45px;
+  padding-top: 45px;
 }
 
 .footer_items-title {
-  @include text($f-size-4, $c-text-m, $f-weight-2);
+  @include text($f-size-4, $c-text-dd, $f-weight-2);
   padding: 10px 15px;
   text-align: left;
 }
 
 .footer_items-text {
   text-decoration: none;
-  @include text($f-size-6, $c-text-m, $f-weight-1);
+  @include text($f-size-6, $c-text-dd, $f-weight-1);
   padding: 0px 15px;
   text-align: left;
+}
+
+.order {
+  order: -1;
 }
 
 .footer_social {
   padding: 10px 15px;
 }
+
+.contact {
+  @include tablet {
+    @include text($f-size-4, $c-text-l, $f-weight-2);
+  }
+}
 .icons {
-  color: $c-text-m;
+  color: $c-text-dd;
   padding-right: 11px;
 }
 
